# parallel_algos_project

./: CMakeLists.txt  README.md
include/: generator.h
src/: generator.cpp  main.cpp  plotting.py
